# script-automatizacao-google-sheets

./: .env.example  .gitignore  CREDENTIALS_SETUP.md  README.md  pyproject.toml
src/scripts/: conection_worksheets.py  config.py  documentation_scripts.ipynb  google_sheets_utils.py  lower_case_column.py  test_config.py
